# wallet-signature-verify

./: .gitignore  ADDING_WALLETS.md  CHANGELOG.md  Cargo.toml  LIBRARY_USAGE.md  README.md  TRUSTED_PUBLISHING.md  USAGE.md  cliff.toml  generate-changelog.sh  run.md
.cargo/: config.toml
.github/workflows/: changelog.yml  release.yml  rust.yml
docs/: CONTRIBUTING.md  HOW_IT_WORKS.md  QUICKSTART.md  TESTING.md
examples/: README.md  simple_usage.rs  verify.js  verify.py  verify.sh  verify_lib.rs
src/: lib.rs  main.rs  output.rs  types.rs
src/crypto/: hash.rs  mod.rs  verify.rs
src/parser/: extract.rs  mod.rs  reconstruct.rs
src/wallets/: mod.rs  provider.rs  registry.rs
src/wallets/WALLET_TEMPLATE/: README.md  mod.rs  provider.rs
src/wallets/bifrost/: core.rs  mod.rs  provider.rs
src/wallets/solana/: mod.rs  provider.rs
src/wallets/wallet_connect/: core.rs  mod.rs  provider.rs
src/wallets/web3auth/: core.rs  mod.rs  provider.rs  recover.rs
src/wallets/xaman/: mod.rs  provider.rs
tests/: README.md  bifrost_integration_tests.rs  solana_integration_tests.rs  wallet_connect_integration_tests.rs  web3auth_integration_tests.rs  xaman_integration_tests.rs
